# SRRP-GUI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.c66bad8  README.md  ac.py  actuatorcontrol.h  baginfo.json  doxconfig  generalwindow.cpp  generalwindow.h  history.cpp  history.h  jsonparser.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  picontroller.cpp  picontroller.h  qtreq.txt  requirements.txt  settings.cpp  settings.h  settings.ui  test.csv
.ccls-cache/@home@eskild@Documents@SRRP-GUI/: history.h  history.h.blob  mainwindow.cpp  mainwindow.cpp.blob  mainwindow.h.blob  settings.h.blob
html/: annotated.html  classHistoryWindow-members.html  classHistoryWindow.html  classMainWindow-members.html  classMainWindow.html  classSettingsWindow-members.html  classSettingsWindow.html  classTest.html  classes.html  files.html  hierarchy.html  history_8h_source.html  mainwindow_8h_source.html  settings_8h_source.html  structBagInfo-members.html  structBagInfo.html
html/search/: searchdata.js
latex/: annotated.tex  classHistoryWindow.eps  classHistoryWindow.tex  classMainWindow.tex  classSettingsWindow.eps  classSettingsWindow.tex  classTest.tex  files.tex  hierarchy.tex  history_8h_source.tex  mainwindow_8h_source.tex  refman.tex  settings_8h_source.tex  structBagInfo.tex
tests/: test0.csv  test1.csv  test2.csv
